fixed spacing in about page

--- a/src/style.css
+++ b/src/style.css
@@ -86,6 +86,10 @@ p {
   font-weight: normal;
 }
 
+.content {
+  margin: 30px;
+}
+
 .about-me-section p {
   opacity: 85%;
 }
